@@ -69,6 +69,12 @@
             <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.cowwoc.requirements</groupId>
+            <artifactId>requirements-java</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -83,6 +89,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-reads io.github.cowwoc.styler.cli=io.github.cowwoc.requirements12.java
+                    </argLine>
+                </configuration>
             </plugin>
 
             <!-- Assembly plugin for executable JAR -->
